--- a/pag redes.html
+++ b/pag redes.html
@@ -26,7 +26,7 @@
 
     <div class="container">
 
-      <form class="form-signin">
+      <form class="form-signin" method="post" id="formulario">
         <h2 class="form-signin-heading">Agregar Contacto</h2>
         <input type="text" class="form-control" placeholder="Nombre" autofocus>
         <input type="text" class="form-control" placeholder="Direccion IP">
