--- a/pag redes2.html
+++ b/pag redes2.html
@@ -40,7 +40,7 @@
 
         <div class="col-xs-6 col-sm-3 sidebar-offcanvas" id="sidebar" ">
           <div class="well sidebar-nav">
-            <iframe src="contactos.txt">
+            <iframe src="contactos.html">
 			</iframe>
           </div><!--/.well -->
 		  <form action = "pagredes.html">
