--- a/pagredes2.html
+++ b/pagredes2.html
@@ -43,9 +43,8 @@
             <iframe src="contactos.html">
 			</iframe>
           </div><!--/.well -->
-		  <form action = "pagredes.html" >
-		  <button class="btn btn-lg btn-primary btn-block" type="submit">Agregar Contacto  </button>
-		  </form>
+		  
+		  <a href ="]/pagredes.html">Agregar</a>
         </div><!--/span-->
       </div><!--/row-->
 	
