--- a/pagredes2.html
+++ b/pagredes2.html
@@ -38,9 +38,9 @@
           
         </div><!--/span-->
 
-        <div class="col-xs-6 col-sm-3 sidebar-offcanvas" id="sidebar" ">
-          <div class="well sidebar-nav">
-            <iframe src="contactos.html">
+        <div class="col-xs-6 col-sm-3 sidebar-offcanvas" id="sidebar" >
+          <div class="well sidebar-nav" >
+            <iframe src="contactos.html" width=220 height=190 >
 			</iframe>
           </div><!--/.well -->
 		  
